<resources>
    <string name="app_name">Easychool</string>
    <string name="criar_conta">Crie sua conta</string>
    <string name="btn_responsavel_aluno">Pais/Responsáveis</string>
    <string name="btn_login">Login</string>
    <string name="fazer_login">Já possui uma conta? Entre</string>
    <string name="txt_email">Email:</string>
    <string name="txt_senha">Senha:</string>
    <string name="fazer_login_title">Faça seu Login</string>
    <string name="fazer_login_desc">Preencha pos campos abaixo para realizar o login</string>
    <string name="esqueceu_senha">Esqueceu sua senha? Clique aqui</string>
    <string name="manter_conctado">Mantenha-me conectado</string>
    <string name="cadastro_pai_aluno">Cadastre-se</string>
    <string name="fazer_cadastro_desc">Preencha os campos abaixo com seus dados pessoais</string>
    <string name="txt_nome">Nome:</string>
    <string name="txt_telefone">Telefone:</string>
    <string name="txt_confirmar_senha">Confirme sua Senha:</string>
    <string name="txt_rg">RG:</string>
    <string name="txt_cpf">CPF:</string>
    <string name="termos_uso">Eu concordo com os Termos e Condições e Política de Privacidade</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="continuar">Continuar</string>
    <string name="definir_senha">Defina uma senha de acesso</string>
    <string name="desc_definir">Defina uma senha para que você possa acessar a nossa plataforma</string>
    <string name="nav_search">Pesquisar</string>
    <string name="nav_config">Configurar</string>
    <string name="nav_fila">Fila de Espera</string>
    <string name="title_activity_principal">MainActivity</string>
    <string name="title_pesquisa">Pesquisar</string>
    <string name="title_fila">Fila de Espera</string>
    <string name="title_confguracao">Configurações</string>
    <string name="title_activity_maps">Map</string>
    <string name="conf_perfil">Perfil</string>
    <string name="conf_notify">Notificações</string>
    <string name="conf_prefire">Preferências</string>
    <string name="conf_logout">Logout</string>
    <string name="from">From</string>
    <string name="empresa">Wings</string>
    <string name="title_config">Faça as suas configurações aqui</string>
    <string name="config_perfil">Altere seus dados, mantendo-os sempre atualizados</string>
    <string name="salvar">Salvar</string>
    <string name="senha_antiga">Digite sua senha atual:</string>
    <string name="senha_nova">Digite a nova senha</string>
    <string name="config_title_prefire">Salve uma localização padrão para a realização das pesquisas</string>
    <string name="conf_cep">CEP</string>
    <string name="conf_rua">Rua</string>
    <string name="conf_estado">Estado</string>
    <string name="conf_cidade">Cidade</string>
    <string name="conf_bairro">Bairro</string>
    <string name="conf_numero">Número</string>
    <string-array name="conf_estado">
        <item>Estado</item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string name="nav_perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="distancias">
        <item>Até 5 Km</item>
        <item>Até 10 Km</item>
        <item>Até 15 Km</item>
        <item>20 Km ou mais</item>
    </string-array>
</resources>