<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cursoandroid.easychool_v4.fragments.PesquisaFrament"
        android:label="@string/title_pesquisa"
        tools:layout="@layout/fragment_pesquisa" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cursoandroid.easychool_v4.fragments.FilaEsperaFragment"
        android:label="@string/title_fila"
        tools:layout="@layout/fragment_fila_de_espera" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cursoandroid.easychool_v4.fragments.ConfigurationFragment"
        android:label="@string/title_confguracao"
        tools:layout="@layout/fragment_configuracoes" />
</navigation>