<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_telas_login_cadastro"
    tools:context=".activity.ConfigPerfilActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgPerfil"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:src="@drawable/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgAddImgPerfil"
        android:layout_width="63dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/imgPerfil"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

    <com.cursoandroid.easychool_v4.helper.PhoneEditText
        android:id="@+id/edtTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_telefone"
        android:inputType="number"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edtCpf"
        app:layout_constraintEnd_toEndOf="@+id/edtNome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtNome"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/config_perfil"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPerfil" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txt_nome"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edtTelefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edtCpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_cpf"
        android:inputType="number"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edtRg"
        app:layout_constraintEnd_toEndOf="@+id/edtTelefone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtTelefone"
        app:layout_constraintTop_toBottomOf="@+id/edtTelefone" />

    <EditText
        android:id="@+id/edtRg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_rg"
        android:inputType="text"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edtSenhaNova"
        app:layout_constraintEnd_toEndOf="@+id/edtCpf"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtCpf"
        app:layout_constraintTop_toBottomOf="@+id/edtCpf" />

    <EditText
        android:id="@+id/edtSenhaNova"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/senha_nova"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_salvar_filtros"
        app:layout_constraintEnd_toEndOf="@+id/edtRg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtRg"
        app:layout_constraintTop_toBottomOf="@+id/edtRg" />

    <Button
        android:id="@+id/btn_salvar_filtros"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/botao_customizado"
        android:text="@string/salvar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtSenhaNova"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtSenhaNova"
        app:layout_constraintTop_toBottomOf="@+id/edtSenhaNova" />

</androidx.constraintlayout.widget.ConstraintLayout>