<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="186dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_easychool_removebg_preview" />

    <TextView
        android:id="@+id/txt_title_criar_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criar_conta"
        android:textColor="@color/text"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/botao_customizado"
        android:onClick="Login"
        android:text="@string/btn_login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_possui_conta" />

    <Button
        android:id="@+id/btn_responsavel_aluno"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/botao_customizado"
        android:onClick="CadastroResponsavelAluno"
        android:text="@string/btn_responsavel_aluno"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_criar_conta" />

    <TextView
        android:id="@+id/txt_possui_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fazer_login"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_responsavel_aluno"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>